<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="288dp"
        android:layout_height="636dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/heightFeetMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heightFeetMessage"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/heightFeet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberDecimal"
                android:onClick="heightFeetClick"
                tools:ignore="MissingConstraints,OnClick" />

            <TextView
                android:id="@+id/heightMeters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/heightMeters"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/operationMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operation"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/plusBtn"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:insetRight="10dp"
                    android:text="@string/plus"
                    android:textAlignment="center"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/minusBtn"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:textAlignment="center"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <TextView
                android:id="@+id/heightAeroMeterMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/heightAeroMeterMessage"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/heightAeroMeter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberDecimal"
                android:onClick="heightFeetClick"
                tools:ignore="MissingConstraints,OnClick" />

            <Button
                android:id="@+id/resultBtn"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/resultBtn" />

            <TextView
                android:id="@+id/resultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/resultValueText"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>